--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,47 +3,32 @@ name: Notify CAPM Service on Push
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   notify-push-op:
     runs-on: ubuntu-latest
-
     steps:
-      # 1) Check out your code
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # 2) Install Node.js (needed for MBT)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      # 3) Install the Multi-Target Application Build Tool (MBT)
       - name: Install MBT
         run: npm install -g mbt@latest
 
-      # 4) Build the MTA archive
       - name: Build MTA archive
         run: mbt build -p cf
 
-      # 5) Upload the generated .mtar as a workflow artifact
       - name: Upload MTA artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4       # ← updated to v4
         with:
           name: mta-archive
           path: mta_archives/*.mtar
 
-      # 6) (Optional) locate the generated .mtar path for payload
-      - name: Find MTAR file path (if any)
-        id: find-mtar
-        run: |
-          MTAR_FILE_PATH=$(find . -type f -path "*/mta_archives/*.mtar" | head -n1 || echo "")
-          echo "MTAR_FILE_PATH=$MTAR_FILE_PATH" >> $GITHUB_ENV
-
-      # 7) Fetch OAuth2 access token
       - name: Fetch OAuth2 access token
         id: auth
         run: |
@@ -51,19 +36,17 @@ jobs:
             -u "${{ secrets.OAUTH_CLIENT_ID }}:${{ secrets.OAUTH_CLIENT_SECRET }}" \
             -d "grant_type=client_credentials" \
             "${{ secrets.OAUTH_TOKEN_URL }}")
-          token=$(echo "$response" | jq -r .access_token)
-          echo "ACCESS_TOKEN=$token" >> $GITHUB_ENV
+          echo "ACCESS_TOKEN=$(echo "$response" | jq -r .access_token)" >> $GITHUB_ENV
 
-      # 8) Call your CAPM /trigger endpoint with full GitHub context
       - name: Call CAPM endpoint with full GitHub context
         run: |
-          curl -X POST https://c6f5b46ctrial-dev-codesail-srv.cfapps.us10-001.hana.ondemand.com/trigger \
+          curl -X POST https://<your-capm-host>/trigger \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $ACCESS_TOKEN" \
             -d '{
-              "ref":             "'"${{ github.ref }}"'",
-              "sha":             "'"${{ github.sha }}"'",
-              "actor":           "'"${{ github.actor }}"'",
+              "ref":            "'"${{ github.ref }}"'",
+              "sha":            "'"${{ github.sha }}"'",
+              "actor":          "'"${{ github.actor }}"'",
               "pusher": {
                 "name":  "'"${{ github.event.pusher.name }}"'",
                 "email": "'"${{ github.event.pusher.email }}"'"
@@ -79,5 +62,5 @@ jobs:
                 "full_name": "'"${{ github.event.repository.full_name }}"'",
                 "url":       "'"${{ github.event.repository.html_url }}"'"
               },
-              "mtar_file_path":  "'"$MTAR_FILE_PATH"'"
+              "mtar_file_path":  "mta_archives/$(basename ${{ steps.find-mtar.outputs.MTAR_FILE_PATH }})"
             }'
